Add site and release plugins